--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
+    "@vercel/speed-insights": "^1.3.1",
     "canvas-confetti": "^1.9.4",
     "next": "^16.0.8",
     "next-auth": "^5.0.0-beta.30",
